tests/sumo/devices/rerouting/personTrip/errors/flow_without_end/errors.sumo.agg
Warning: 2 total messages of type: Undefined end for % '%', defaulting to 24hour duration.
